Added original dynamic functionality

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Magister Gay Edition™",
+  "name": "Magister: Gay Edition™",
   "description": "Turns your boring blue Magister into a vivid gay Magister.",
   "version": "1.0",
   "manifest_version": 3,
