--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,9 +16,11 @@
     }
   ],
   "icons": {
-    "16": "/images/iconx16.png",
-    "32": "/images/iconx32.png",
-    "48": "/images/iconx48.png",
-    "128": "/images/iconx128.png"
+    "16": "/images/icon16.png",
+    "32": "/images/icon32.png",
+    "48": "/images/icon48.png",
+    "64": "/images/icon64.png",
+    "128": "/images/icon128.png",
+    "256": "/images/icon256.png"
   }
 }
